update spark add log