@@ -71,7 +71,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>${maven-surefire-plugin.version}</version>
         <configuration>
-          <argLine>-XX:+EnableDynamicAgentLoading</argLine>
+          <argLine>--add-exports java.base/sun.nio.ch=ALL-UNNAMED -XX:+EnableDynamicAgentLoading </argLine>
         </configuration>
       </plugin>
     </plugins>
